# ISO_13528_stat

./: Algorithm-A.xls  Launch Algorithm A.bat  Launch Algorithm A.command  Makefile  README.md  alg_a.py  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample_input.csv  sample_input_84.csv  sample_output.csv  sample_output_84.csv
tests/: test_alg_a.py
